Revision history for Geometry-Primitive

0.05
  - Add MooseX::Clone for Point (for now)

0.04
  - Add Circle
  - Move 'origin' attribute from Rectangle to Shape and make it !required

0.03
  - Add MI version because Yuval yelled at me
  - Add degrees_to_radians and radians_to_degrees to Util
  
0.02    2008-07-09
  - Package fixes, no changes

0.01    Date/time
        First version, released on an unsuspecting world.
