@@ -36,6 +36,8 @@ sub get_points {
     return \@points
 }
 
+__PACKAGE__->meta->make_immutable;
+
 no Moose;
 1;
 
