@@ -2,6 +2,7 @@ Revision history for Geometry-Primitive
 
 0.05
   - Add MooseX::Clone for Point (for now)
+  - Add make_immutable to er'thang
 
 0.04
   - Add Circle
